Client: Fixing clone + download repo button alignment for standard repos

--- a/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.scss
+++ b/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.scss
@@ -18,4 +18,8 @@
     .repository-url {
         display: block;
     }
+
+    .clone-buttons {
+        display: inline;
+    }
 }
